# Experimenting

./: CMakeLists.txt  build.sh
experiments/: eval_exp.m  pr_exp.eps
includes/: bticonfig.h.in  config.h  transceive.h  utils.h
src/: config.c  frameexperimenting.c  ofdm.c  ofdm_rx.c  ofdm_tx.c  transceive.c  tryframing.c  utils.c
